@@ -217,6 +217,16 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-654'>UIMA-654</a>] -         add missing license header 
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-655'>UIMA-655</a>] -         testMergeTypeSystemElementType(org.apache.uima.util.CasCreationUtilsTest) fails on Linux
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-656'>UIMA-656</a>] -         Eclipse update site not working - nothing shows up as selectable
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-659'>UIMA-659</a>] -         Conform Eclipse update site to Apache Distribution location requirements
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-663'>UIMA-663</a>] -         CDE Resource Dependency page throwing NPE if XML missing &lt;resourceManagerConfiguration&gt; element
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-665'>UIMA-665</a>] -         sometimes the test testHasNextWithOutOfMemoryError() for test class CpmCollectionReader_ErrorTest fails
+</li>
 </ul>
     
 <h2>        Improvement
@@ -236,6 +246,12 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-638'>UIMA-638</a>] -         CVD should allow viewing FSArrays longer than 20 elements
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-661'>UIMA-661</a>] -         update docs for Eclipse Update Site install
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-662'>UIMA-662</a>] -         Fix running footer in PDF docs having text overflow
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-664'>UIMA-664</a>] -         CustomResourceFactory_impl not catching exceptions when calling out to initialize method
+</li>
 </ul>
     
 <h2>        New Feature
@@ -244,6 +260,8 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-580'>UIMA-580</a>] -         Make the CDE plugin extensible
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-640'>UIMA-640</a>] -         Add more convenience methods to TypeSystemUtils
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-660'>UIMA-660</a>] -         Add mirrors support to our website for use by Eclipse Update Site
 </li>
 </ul>
             
